# arith_homfa

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  clang_build_attempt.md
.github/workflows/: deploy-docs.yml
bats/: blood_glucose.bats  ckks_enc_dec.bats  key_generation.bats  ltl2spec.bats  tfhe_enc_dec.bats
doc/: Doxyfile.in  README.md  ahomfa_util.md  mkdocs.yml
doc/docs/: appendices.md  cli-reference.md  core-concepts.md  developer-notes.md  index.md  installation.md  integration.md  limitations.md  performance.md  quick-start.md  spec-language.md  troubleshooting.md  tutorials.md
docker/: README.md  apply-portable-arch-patches.sh  build_images.sh
docker/debian-trixie/: Dockerfile
docker/patches/: hexl-portable-arch.patch  homfa-experiment-portable-arch.patch  homfa-tfhepp-portable-arch.patch  tfhepp-portable-arch.patch
docker/ubuntu24.04/: Dockerfile
examples/: .gitignore  CMakeLists.txt  Makefile  README.md  ckks.key  ckks.relinkey  config.json  data.ckks  data.txt  run_bg.sh  run_vrss.sh
examples/blood_glucose/: CMakeLists.txt  Makefile  README.md  bg1.ltl  bg10.ltl  bg11.ltl  bg2.ltl  bg4.ltl  bg6.ltl  bg7.ltl  bg8.ltl  bg_predicate.cc  blood_glucose_eight.cc  blood_glucose_eleven.cc  blood_glucose_five.cc  blood_glucose_four.cc  blood_glucose_one.cc  blood_glucose_one_dummy.cc  blood_glucose_seven.cc  blood_glucose_six.cc  blood_glucose_ten.cc  blood_glucose_two.cc  gp0.ltl  gp0.spec  input.txt  run_example.sh
examples/vehicle_rss/: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  extract_preceding.py  move1.json  move11.json  move12.json  move13.json  move14.json  move15.json  move16.json  move2.json  run_example.sh  vrss.ltl  vrss.xltl  vrss_predicate.cc
scripts/: build_and_test.sh  noise-estimation.py  security-estimation.py
src/: abstract_runner.hh  ahomfa_runner.cc  ahomfa_runner.hh  block_runner.hh  bootstrapping_key.hh  ckks_no_embed.hh  ckks_predicate.hh  ckks_to_tfhe.hh  graph.cpp  graph.hpp  key_loader.hh  lvl3_to_lvl1.hh  main.cc  my_params.hh  offline_runner.hh  online_dfa.cpp  plain_runner.hh  rescaling.hh  reverse_runner.hh  seal_config.hh  secret_key.hh  sigextraction.hh  sized_cipher_reader.hh  sized_cipher_writer.hh  sized_tlwe_reader.hh  sized_tlwe_writer.hh  tfhe_lvl3_inst.cc  tfhepp_util.cpp  tfhepp_util.hpp  tic_toc.hh
test/: adult#001_night.bg.txt  block_runner_test.cc  blood_glucose_one.cc  bootstrapping_key_test.cc  ckks_no_embed_test.cc  ckks_predicate_test.cc  ckks_reader_writer_test.cc  ckks_to_tfhe_test.cc  offline_runner_test.cc  plain_runner_test.cc  pointwise_runner_test.cc  reverse_runner_test.cc  seal_config_test.cc  secret_key_test.cc  tfhe_lvl3_to_lvl1_test.cc  tfhepp_keygen_test.cc  tlwe_reader_writer_test.cc
